# paint

./: .astylerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  draw.c  draw.h  main.c  palette.c  palette.h
src/: CMakeLists.txt  app.c  app.h  app_brush.c  app_canvas.c  app_context.c  app_context.h  app_context_brush.c  app_context_canvas.c  app_context_draw.c  app_context_keyboard.c  app_context_layout.c  app_context_mouse.c  app_context_palette.c  app_context_resize.c  app_context_state.c  app_draw.c  app_keyboard.c  app_layout.c  app_mouse.c  app_palette.c  app_resize.c  app_state.c  color_utils.c  color_utils.h  draw.c  draw.h  emoji_data.c  emoji_data.h  emoji_renderer.c  emoji_renderer.h  event_handler.c  event_handler.h  main.c  palette.c  palette.h  palette_draw.c  palette_emojis_data.c  palette_queries.c  pch.h  (+14 more)
